--- a/config.cfg
+++ b/config.cfg
@@ -1,1 +1,1 @@
-SQLALCHEMY_DATABASE_URI = 'postgres://mudasir:12345@postgres:5432/demo_db'
+SQLALCHEMY_DATABASE_URI = 'postgres://rohit:redhat@postgres:5432/demo_db'
