--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: "flask"
-        image: "gcr.io/<project-id>/flask-image"
+        image: "rupeshsaini09/flask-app"
 
 
 ---
@@ -33,10 +33,10 @@ spec:
   - protocol: "TCP"
     port: 80
     targetPort: 5000
+    nodePort: 30500
   selector:
     app: "flask"
-  type: "LoadBalancer"
-  loadBalancerIP: ""
+  type: "NodePort"
 
 ---
 apiVersion: "v1"
@@ -48,8 +48,8 @@ metadata:
     app: "postgres"
 data:
   POSTGRES_DB: "demo_db"
-  POSTGRES_USER: "mudasir"
-  POSTGRES_PASSWORD: "12345"
+  POSTGRES_USER: "rohit"
+  POSTGRES_PASSWORD: "redhat"
 
 
 ---
@@ -61,7 +61,7 @@ metadata:
   labels:
     app: "postgres"
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: "postgres"
@@ -92,26 +92,6 @@ spec:
         ports:
           - containerPort: 5432
             name: postgres
-        volumeMounts:
-          - name: postgres-storage
-            mountPath: /var/lib/postgresql/db-data
-      volumes:
-        - name: postgres-storage
-          persistentVolumeClaim:
-            claimName: postgres-pv-claim
-
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-pv-claim
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Gi
-
 ---
 apiVersion: v1
 kind: Service
